# ChangeLog for app-dicts/aspell-ru
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-ru/ChangeLog,v 1.22 2009/12/25 18:09:54 pva Exp $

*aspell-ru-0.99.1-r1 (25 Dec 2009)

  25 Dec 2009; Peter Volkov <pva@gentoo.org> +aspell-ru-0.99.1-r1.ebuild:
  Change default dictionary on yeyo, bug #280498, thank Nikoli, Jan
  Aniŝĉuk and other guys there.

  18 Oct 2009; Mark Loeser <halcy0n@gentoo.org> aspell-ru-0.50.2.ebuild,
  aspell-ru-0.99.1.ebuild:
  QA fixes; IUSE is not defined

  03 Nov 2007; Roy Marples <uberlord@gentoo.org> aspell-ru-0.99.1.ebuild:
  Keyworded ~sparc-fbsd and ~x86-fbsd

  15 Aug 2007; Jeroen Roovers <jer@gentoo.org> aspell-ru-0.99.1.ebuild:
  Stable for HPPA (bug #178690).

  09 Aug 2007; Markus Rothe <corsair@gentoo.org> aspell-ru-0.99.1.ebuild:
  Stable on ppc64; bug #178690

  05 Aug 2007; Raúl Porcel <armin76@gentoo.org> aspell-ru-0.99.1.ebuild:
  alpha/ia64/x86 stable wrt #178690

  05 Aug 2007; nixnut <nixnut@gentoo.org> aspell-ru-0.99.1.ebuild:
  Stable on ppc wrt bug 178690

  04 Aug 2007; Ferris McCormick <fmccor@gentoo.org> aspell-ru-0.99.1.ebuild:
  Sparc stable --- part of Bug #178690

  04 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  aspell-ru-0.99.1.ebuild:
  Marked stable on amd64 as per bug 178690.

  04 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  aspell-ru-0.99.1.ebuild:
  Tested on alpha and re-added the ~alpha keyword.

  12 May 2007; Markus Rothe <corsair@gentoo.org> aspell-ru-0.99.1.ebuild:
  Added ~ppc64; bug #147568

  22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  aspell-ru-0.99.1.ebuild:
  Use mirror://gnu/ rather than ftp.gnu.org.

  01 Dec 2006; Kevin F. Quinn <kevquinn@gentoo.org> aspell-ru-0.50.2.ebuild,
  aspell-ru-0.99.1.ebuild:
  Ebuild cleanups for bug #132718

  20 Feb 2005; Anders Rune Jensen <arj@gentoo.org> aspell-ru-0.99.1.ebuild:
  Fix KEYWORDS. Remove IUSE, repoman is broken, the eclass has it.
