@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/aspell-ru
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-ru/ChangeLog,v 1.22 2009/12/25 18:09:54 pva Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-ru/ChangeLog,v 1.23 2010/03/21 14:55:06 ranger Exp $
+
+  21 Mar 2010; Brent Baude <ranger@gentoo.org> aspell-ru-0.99.1-r1.ebuild:
+  Marking aspell-ru-0.99.1-r1 ppc64 stable for bug 310015
 
 *aspell-ru-0.99.1-r1 (25 Dec 2009)
 
